--- a/client/tiktak.html
+++ b/client/tiktak.html
@@ -3,15 +3,173 @@
 </head>
 
 <body>
+  
+</body>
+
+
+<!-- Layout -->
+<!-- ########################################## -->
+
+
+<template name="tiktak">
   <header>
     <h1></h1>
   </header>
 
   <main>
-    {{> login}}
-
-    <p>
-      Nemáš konto? <a>Tak si ho sprav!</a>
-    </p>
+    {{> yield}}
   </main>
-</body>
+</template>
+
+<!-- Login/Signup -->
+<!-- ########################################## -->
+
+
+<template name="login">
+  <form>
+    <div>
+      <input id="name" type="text" placeholder="Meno" />
+    </div>
+
+    <div>
+      <input id="password" type="password" placeholder="Heslo" />
+    </div>
+
+    <div>
+      <input type="submit" value="Prihlásiť sa" />
+    </div>
+
+  </form>
+
+  <p>
+    Nemáš konto?
+    <a href="{{urlFor route='signup'}}">
+      Tak si ho sprav!
+    </a>
+  </p>
+</template>
+
+
+
+
+<template name="signup">
+  <form>
+    <div>
+      <input id="name" type="text" placeholder="Meno" />
+    </div>
+
+    <div>
+      <input id="email" type="text" placeholder="E-mail" />
+    </div>
+
+    <div>
+      <input id="password" type="password" placeholder="Heslo" />
+    </div>
+
+    <div>
+      <input type="submit" value="Vytvoriť konto" />
+    </div>
+
+  </form>
+
+
+  <p>
+    <a href="{{urlFor route='stories'}}">
+      Naspäť
+    </a>
+
+  </p>
+</template>
+
+
+
+<!-- Stories -->
+<!-- ########################################## -->
+
+<template name="stories">
+  <p>
+    <a href="{{urlFor route='stories.new'}}">
+      Pridať novú myšlienku
+    </a>
+
+    |
+
+    <a href="{{urlFor route='logout'}}">
+      Odhlásiť sa
+    </a>
+
+  </p>
+
+  {{#each stories}}
+    {{> story}}
+  {{/each}}
+
+</template>
+
+
+<template name="story">
+  <div class="story">
+    <strong>
+      {{content}}
+    </strong>
+
+    <div class="author">
+      Myšlienku pridal <em>@{{author}}</em>
+
+      |
+
+      <a href={{urlFor route='stories.show'}}>
+        Zobraziť odpovede ({{replyCount}})
+      </a>
+    </div>
+  </div>
+</template>
+
+<template name="storiesNew">
+  <div class="story">
+    <h2>Pridať myšlienku</h2>
+
+    <form>
+      <textarea id="content"></textarea>
+
+      <div>
+        <input type="submit" value="Pridať" />
+      </div>
+
+    </form>
+  </div>
+</template>
+
+<template name="storiesShow">
+  <div class="story">
+    <h2>Myšlienka od <em>@{{author}}</em></h2>
+
+    <div class="content">
+      <strong>
+        {{content}}
+      </strong>
+    </div>
+
+
+    <h2>Odpovede</h2>
+
+    <div class="replies">
+      {{#each replies}}
+        <div class="reply">
+          {{content}}
+
+          - <strong>@{{author}}</strong>
+        </div>
+      {{/each}}
+    </div>
+
+    <form>
+      <textarea id="content"></textarea>
+      <div>
+        <input type="submit" value="Pridať odpoveď" />
+      </div>
+    </form>
+  </div>
+</template>
+
+
