--- a/client/tiktak.html
+++ b/client/tiktak.html
@@ -125,6 +125,9 @@
   </div>
 </template>
 
+<!-- Creating story -->
+<!-- ########################################## -->
+
 <template name="storiesNew">
   <div class="story">
     <h2>Pridať myšlienku</h2>
@@ -139,6 +142,9 @@
     </form>
   </div>
 </template>
+
+<!-- Showing story -->
+<!-- ########################################## -->
 
 <template name="storiesShow">
   <div class="story">
